--- a/index.html
+++ b/index.html
@@ -13,6 +13,44 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <title>TeleBot Host - Free Telegram Bot Hosting</title>
+    <meta name="description" content="🚀 Host your Telegram bots for free with TeleBotHost – the fastest, most secure, and scalable Telegram bot hosting platform. 1-click deployment, 24/7 uptime, and fully managed hosting. Compete with top platforms like AWS Lambda, PythonAnywhere, Oracle Cloud, HostArmada, and more.">
+<meta name="keywords" content="
+Telegram bot hosting, free Telegram bot hosting, best Telegram bot hosting, secure Telegram bot server, scalable bot hosting, fast Telegram bot hosting, 24/7 Telegram bot uptime, automated Telegram bots, TeleBotHost, Tele-Bot-Host, TeleBotHaven, TelebotCreator, online Telegram bot hosting, Telegram bot deployment, cloud bot hosting, serverless Telegram bot hosting, PythonAnywhere Telegram bots, AWS Lambda Telegram bots, Oracle Cloud Telegram bots, HostArmada Telegram bot hosting, high-performance bot hosting, Telegram bot management, reliable bot servers, affordable Telegram bot hosting, top Telegram bot hosting 2025, free tier bot hosting, Telegram bot automation, Telegram bot server cost, Telegram bot hosting comparison, Telegram bot hosting tutorial, Telegram bot hosting guide, Telegram bot hosting platform review, host Telegram bots instantly, Telegram bot hosting solutions, Telegram bot hosting providers, Telegram bot hosting features, Telegram bot hosting for beginners, Telegram bot hosting experts, Telegram bot server performance, best free Telegram bot host, Telegram bot hosting tips, Telegram bot development, Telegram bot hosting reviews, Telegram bot cloud hosting, Telegram bot hosting fast server, Telegram bot hosting online, top free Telegram bot hosting, Telegram bot automation tools, Telegram bot platform, cheap Telegram bot servers, scalable Telegram hosting, high-speed bot hosting, Telegram bot server setup, Telegram bot hosting security, best hosting for Telegram bots, Telegram bot server management, Telegram bot hosting service, Telegram bot hosting site, top Telegram bot platforms, rose bot, free music Downloder Telegrm bot , best Telegram bot on GitHub , Bot hosting Providers, Telegrm Bot course , Telegram bot deployment service, bot servers, Ai bot maker, Chat gpt Telegrm bot, Bot Bussiness alternative
+">
+  <meta name="author" content="TeleBotHost Team">
+<meta name="robots" content="index, follow, max-image-preview:large">
+    <link rel="canonical" href="https://telebothost.com/">
+  <link rel="alternate" hreflang="x-default" href="https://telebothost.com/">
+  <!-- Open Graph / Social Meta (Facebook, LinkedIn) -->
+  <meta property="og:title" content="Fast Telegram Bot Hosting | Secure & Scalable | TeleBotHost">
+  <meta property="og:description" content="🚀 TeleBotHost offers the fastest, most secure Telegram bot hosting with 99.9% uptime. Deploy & manage bots instantly with 1-click setup.">
+  <meta property="og:image" content="https://telebothost.com/assets/preview.png">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  <meta property="og:image:alt" content="Telegram Bot Hosting Dashboard - TeleBotHost">
+  <meta property="og:url" content="https://telebothost.com/">
+  <meta property="og:type" content="website">
+  <meta property="og:site_name" content="TeleBotHost">
+  <meta property="og:locale" content="en_US">
+
+  <!-- Twitter Card Meta -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Fast Telegram Bot Hosting | Secure & Scalable | TeleBotHost">
+  <meta name="twitter:description" content="🚀 TeleBotHost offers the fastest, most secure Telegram bot hosting with 99.9% uptime. Deploy & manage bots instantly with 1-click setup.">
+  <meta name="twitter:image" content="https://telebothost.com/assets/preview.png">
+  <meta name="twitter:image:alt" content="Telegram Bot Hosting Dashboard - TeleBotHost">
+
+  <!-- Telegram Channel -->
+  <meta name="telegram:channel" content="@TeleBotHaven">
+
+  <!-- Favicon & App Icons -->
+  <link rel="icon" href="https://telebothost.com/favicon.ico" type="image/x-icon">
+  <link rel="apple-touch-icon" sizes="180x180" href="https://telebothost.com/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="https://telebothost.com/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="https://telebothost.com/favicon-16x16.png">
+  <link rel="manifest" href="https://telebothost.com/site.webmanifest">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Geist:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <script src="https://unpkg.com/lucide@latest/dist/umd/lucide.js"></script>
@@ -420,17 +458,8 @@
                         The easiest way to deploy and manage your Telegram bots. Free hosting with powerful features for developers of all levels.
                     </p>
                     <div class="flex space-x-4">
-                        <a href="#" class="text-black">
+                        <a href="https://github.com/telebothost/landing-page" class="text-black">
                             <i data-lucide="github" class="w-5 h-5"></i>
-                        </a>
-                        <a href="#" class="text-black">
-                            <i data-lucide="twitter" class="w-5 h-5"></i>
-                        </a>
-                        <a href="#" class="text-black">
-                            <i data-lucide="message-circle" class="w-5 h-5"></i>
-                        </a>
-                        <a href="#" class="text-black">
-                            <i data-lucide="youtube" class="w-5 h-5"></i>
                         </a>
                     </div>
                 </div>
@@ -439,9 +468,9 @@
                     <div>
                         <h3 class="font-semibold mb-4">Product</h3>
                         <ul class="space-y-2 text-gray-600">
-                            <li><a href="/features" class="hover-underline">Features</a></li>
+                            <li><a href="/tutorials" class="hover-underline">Tutorials</a></li>
                             <li><a href="/docs" class="hover-underline">Documentation</a></li>
-                            <li><a href="/templates" class="hover-underline">Templates</a></li>
+                            <li><a href="/resources" class="hover-underline">Resources</a></li>
                             <li><a href="/changelog" class="hover-underline">Changelog</a></li>
                         </ul>
                     </div>
@@ -451,7 +480,7 @@
                         <ul class="space-y-2 text-gray-600">
                             <li><a href="/about" class="hover-underline">About</a></li>
                             <li><a href="/blog" class="hover-underline">Blog</a></li>
-                            <li><a href="/careers" class="hover-underline">Careers</a></li>
+
                             <li><a href="/contact" class="hover-underline">Contact</a></li>
                         </ul>
                     </div>
@@ -466,15 +495,6 @@
                         </ul>
                     </div>
                     
-                    <div>
-                        <h3 class="font-semibold mb-4">Developers</h3>
-                        <ul class="space-y-2 text-gray-600">
-                            <li><a href="/github" class="hover-underline">GitHub</a></li>
-                            <li><a href="/sdk" class="hover-underline">SDK</a></li>
-                            <li><a href="/cli" class="hover-underline">CLI Tool</a></li>
-                            <li><a href="/examples" class="hover-underline">Examples</a></li>
-                        </ul>
-                    </div>
                 </div>
             </div>
             
