--- a/contact/index.html
+++ b/contact/index.html
@@ -3,11 +3,32 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>TeleBot Host - Contact</title>
+
+  <title>Contact TeleBot Host – 24/7 Telegram Bot Hosting Support</title>
+
+  <meta name="description" content="Contact TeleBot Host for 24/7 Telegram bot hosting support. Get help via email or Telegram for bot setup, troubleshooting, API issues, and platform guidance.">
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="Contact TeleBot Host – 24/7 Support">
+  <meta property="og:description" content="Need help with Telegram bot hosting? Contact TeleBot Host anytime!">
+  <meta property="og:image" content="https://telebothost.com/assets/img/logo.png">
+  <meta property="og:url" content="https://telebothost.com/contact">
+  <meta property="og:type" content="website">
+
+  <!-- Twitter Cards -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Contact TeleBot Host – 24/7 Support">
+  <meta name="twitter:description" content="Reach us by email or Telegram anytime for instant support.">
+  <meta name="twitter:image" content="https://telebothost.com/assets/img/logo.png">
+
+  <!-- Canonical -->
+  <link rel="canonical" href="https://telebothost.com/contact">
+
+  <!-- Branding / Fonts / Icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/assets/style.css" type="text/css" media="all" />
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2719295794573158" crossorigin="anonymous"></script>
+
   <style>
     section { padding:100px 20px 50px; max-width:900px; margin:auto; }
     h2 { font-size:1.8rem; color:#0088cc; text-align:center; margin-bottom:10px; }
@@ -20,6 +41,29 @@
     .contact-info a { color:#0088cc; text-decoration:none; }
     .contact-info a:hover { text-decoration:underline; }
   </style>
+
+  <!-- Structured Data (SEO Boost) -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "TeleBot Host",
+    "url": "https://telebothost.com",
+    "logo": "https://telebothost.com/assets/img/logo.png",
+    "contactPoint": [{
+      "@type": "ContactPoint",
+      "email": "support@telebothost.com",
+      "contactType": "customer support",
+      "availableLanguage": ["en"],
+      "areaServed": "Worldwide"
+    }],
+    "sameAs": [
+      "https://t.me/update_chat",
+      "https://t.me/TeleBotHaven"
+    ]
+  }
+  </script>
+
 </head>
 <body>
  <header id="header">
@@ -41,31 +85,59 @@
    <div class="contact-section">
      <h3>Email Support</h3>
      <div class="contact-info">
-       <p><i class="fas fa-envelope"></i> Contact Support: <a href="mailto:support@telebothost.com">support@telebothost.com</a></p>
-       <p>Our support team is always available to assist with bot hosting issues, API guidance, or general platform inquiries. Expect a fast response at any time, day or night.</p>
+       <p><i class="fas fa-envelope"></i> Contact Support: 
+         <a href="mailto:support@telebothost.com">support@telebothost.com</a>
+       </p>
+       <p>
+         Our support team is always available to assist with bot hosting issues, API guidance,
+         or general platform inquiries. Expect a fast response at any time, day or night.
+       </p>
      </div>
    </div>
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-format="fluid"
-     data-ad-layout-key="-fb+5w+4e-db+86"
-     data-ad-client="ca-pub-2719295794573158"
-     data-ad-slot="8786409519"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
 
    <div class="contact-section">
      <h3>Telegram Support</h3>
      <div class="contact-info">
-       <p><i class="fab fa-telegram"></i> Chat with us on Telegram: <a href="https://t.me/update_chat" target="_blank">@update_chat</a></p>
-       <p>For instant help, reach us directly on Telegram. We provide guidance for bot setup, troubleshooting, and platform features, anytime you need.</p>
+       <p><i class="fab fa-telegram"></i> Chat with us on Telegram: 
+         <a href="https://t.me/update_chat" target="_blank">@update_chat</a>
+       </p>
+       <p>
+         For instant help, reach us directly on Telegram. We provide guidance for bot setup,
+         troubleshooting, and platform features, anytime you need.
+       </p>
+     </div>
+   </div>
+
+   <div class="contact-section">
+     <h3>Telegram Channel</h3>
+     <div class="contact-info">
+       <p><i class="fab fa-telegram"></i> Updates & Announcements: 
+         <a href="https://t.me/TeleBotHaven" target="_blank">TeleBotHaven</a>
+       </p>
+       <p>
+         Join our official Telegram Channel to stay updated with platform changes, 
+         announcements, and upcoming features.
+       </p>
      </div>
    </div>
 
    <div class="contact-section">
      <h3>Additional Info</h3>
-     <p>TeleBot Host is dedicated to providing reliable and secure bot hosting services. Contact us anytime via email or Telegram—we guarantee 24/7 support and quick assistance for all users.</p>
+     <p>
+       TeleBot Host provides secure, fast, and reliable Telegram bot hosting services. 
+       Contact us anytime via email or Telegram—we guarantee 24/7 support and quick 
+       assistance for all users.
+     </p>
+   </div>
+
+   <div style="margin-top:50px; color:#555; line-height:1.6;">
+     <h3>Why Choose TeleBot Host?</h3>
+     <p>
+       TeleBot Host ensures top-tier performance for Telegram bots, with automatic scaling, 
+       containerized isolation, developer-friendly tools, and continuous uptime monitoring. 
+       Whether you're hosting small utility bots or high-traffic production bots, 
+       our infrastructure keeps your services fast, safe, and online 24/7.
+     </p>
    </div>
 
  </section>
