--- a/contact/index.html
+++ b/contact/index.html
@@ -6,11 +6,29 @@
 
   <title>Contact TeleBot Host – 24/7 Telegram Bot Hosting Support</title>
 
-  <meta name="description" content="Contact TeleBot Host for 24/7 Telegram bot hosting support. Get help via email or Telegram for bot setup, troubleshooting, API issues, and platform guidance.">
+  <meta name="description" content="Contact TeleBot Host for 24/7 Telegram bot hosting support. Get assistance via email or Telegram for bot setup, troubleshooting, errors, hosting help, and platform guidance.">
+
+  <!-- SEO Keywords -->
+  <meta name="keywords" content="
+    telebothost,
+    telebot host,
+    telebothost support,
+    telebothost contact,
+    telebothost telegram channel link,
+    telebothost telegram,
+    telebothost haven,
+    telebothaven,
+    telegram bot hosting,
+    telegram bot support,
+    telegram bot help,
+    telegram bot uptime,
+    bot hosting platform,
+    free telegram bot hosting
+  ">
 
   <!-- Open Graph -->
   <meta property="og:title" content="Contact TeleBot Host – 24/7 Support">
-  <meta property="og:description" content="Need help with Telegram bot hosting? Contact TeleBot Host anytime!">
+  <meta property="og:description" content="Need help with Telegram bot hosting? Contact TeleBot Host via email or Telegram anytime!">
   <meta property="og:image" content="https://telebothost.com/assets/img/logo.png">
   <meta property="og:url" content="https://telebothost.com/contact">
   <meta property="og:type" content="website">
@@ -18,13 +36,13 @@
   <!-- Twitter Cards -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Contact TeleBot Host – 24/7 Support">
-  <meta name="twitter:description" content="Reach us by email or Telegram anytime for instant support.">
+  <meta name="twitter:description" content="Reach TeleBot Host support anytime for Telegram bot hosting help.">
   <meta name="twitter:image" content="https://telebothost.com/assets/img/logo.png">
 
   <!-- Canonical -->
   <link rel="canonical" href="https://telebothost.com/contact">
 
-  <!-- Branding / Fonts / Icons -->
+  <!-- Assets -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/assets/style.css" type="text/css" media="all" />
@@ -42,7 +60,7 @@
     .contact-info a:hover { text-decoration:underline; }
   </style>
 
-  <!-- Structured Data (SEO Boost) -->
+  <!-- Structured Data -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
@@ -63,8 +81,8 @@
     ]
   }
   </script>
-
 </head>
+
 <body>
  <header id="header">
    <div class="container nav-container">
@@ -85,58 +103,43 @@
    <div class="contact-section">
      <h3>Email Support</h3>
      <div class="contact-info">
-       <p><i class="fas fa-envelope"></i> Contact Support: 
+       <p><i class="fas fa-envelope"></i> Contact Support:
          <a href="mailto:support@telebothost.com">support@telebothost.com</a>
        </p>
-       <p>
-         Our support team is always available to assist with bot hosting issues, API guidance,
-         or general platform inquiries. Expect a fast response at any time, day or night.
-       </p>
+       <p>Our team is always available to assist with bot hosting issues, debugging, API help, or general platform questions.</p>
      </div>
    </div>
 
    <div class="contact-section">
      <h3>Telegram Support</h3>
      <div class="contact-info">
-       <p><i class="fab fa-telegram"></i> Chat with us on Telegram: 
+       <p><i class="fab fa-telegram"></i> Chat with us:
          <a href="https://t.me/update_chat" target="_blank">@update_chat</a>
        </p>
-       <p>
-         For instant help, reach us directly on Telegram. We provide guidance for bot setup,
-         troubleshooting, and platform features, anytime you need.
-       </p>
+       <p>Instant support for bot setup, troubleshooting, errors, and platform guidance.</p>
      </div>
    </div>
 
    <div class="contact-section">
      <h3>Telegram Channel</h3>
      <div class="contact-info">
-       <p><i class="fab fa-telegram"></i> Updates & Announcements: 
+       <p><i class="fab fa-telegram"></i> Official Channel:
          <a href="https://t.me/TeleBotHaven" target="_blank">TeleBotHaven</a>
        </p>
-       <p>
-         Join our official Telegram Channel to stay updated with platform changes, 
-         announcements, and upcoming features.
-       </p>
+       <p>Join our official Telegram channel for updates, announcements, and new feature rollouts.</p>
      </div>
    </div>
 
    <div class="contact-section">
      <h3>Additional Info</h3>
-     <p>
-       TeleBot Host provides secure, fast, and reliable Telegram bot hosting services. 
-       Contact us anytime via email or Telegram—we guarantee 24/7 support and quick 
-       assistance for all users.
-     </p>
+     <p>TeleBot Host is committed to providing secure, fast, and reliable Telegram bot hosting. Contact us anytime — we respond instantly.</p>
    </div>
 
    <div style="margin-top:50px; color:#555; line-height:1.6;">
      <h3>Why Choose TeleBot Host?</h3>
      <p>
-       TeleBot Host ensures top-tier performance for Telegram bots, with automatic scaling, 
-       containerized isolation, developer-friendly tools, and continuous uptime monitoring. 
-       Whether you're hosting small utility bots or high-traffic production bots, 
-       our infrastructure keeps your services fast, safe, and online 24/7.
+       TeleBot Host ensures top-tier hosting performance with auto-scaling, isolation, fast deployment,
+       uptime monitoring, and developer-friendly tools. Perfect for small projects to large production bots.
      </p>
    </div>
 
