--- a/tutorials/setup-bot-code.html
+++ b/tutorials/setup-bot-code.html
@@ -27,6 +27,9 @@ Telegram bot hosting, free Telegram bot hosting, best Telegram bot hosting, secu
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/assets/style.css" />
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2719295794573158" crossorigin="anonymous"></script>
+  <script async custom-element="amp-auto-ads"
+        src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js">
+</script>
   <style>
     section { padding:80px 20px; max-width:950px; margin:auto; line-height:1.7; }
     h2 { font-size:2rem; color:#0088cc; text-align:center; margin-bottom:10px; }
@@ -53,6 +56,9 @@ Telegram bot hosting, free Telegram bot hosting, best Telegram bot hosting, secu
   </style>
 </head>
 <body>
+  <amp-auto-ads type="adsense"
+        data-ad-client="ca-pub-2719295794573158">
+</amp-auto-ads>
 <header id="header">
   <div class="container nav-container">
     <a href="/" class="logo">
