--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@ Telegram bot hosting, free Telegram bot hosting, best Telegram bot hosting, secu
                             <div>
                                 <dt class="text-xl font-semibold mb-2">Is TeleBotHost really free?</dt>
                                 <dd class="text-gray-600">
-                                    Yes! We offer a generous free tier that includes 1 active bot, 10,000 requests per month, and basic analytics. You only pay when you need more resources.
+                                    Yes! We offer a generous free tier that includes unlimited active bot, unlimited requests per month, and basic analytics. You only pay when you need more resources like more storage features, 90% are free .
                                 </dd>
                             </div>
                             <div>
@@ -505,7 +505,7 @@ Telegram bot hosting, free Telegram bot hosting, best Telegram bot hosting, secu
                             <div>
                                 <dt class="text-xl font-semibold mb-2">Can I migrate my existing bot to TeleBotHost?</dt>
                                 <dd class="text-gray-600">
-                                    Absolutely! We provide migration tools and documentation to help you move your existing bots from other platforms with minimal downtime.
+                                    Absolutely! We provide migration tools and documentation to help you move your existing bots from other platforms with minimal downtime. Yes your js code will work too with little adjustment.
                                 </dd>
                             </div>
                         </dl>
