--- a/tests/index.html
+++ b/tests/index.html
@@ -7,10 +7,29 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2719295794573158" crossorigin="anonymous"></script>
 </head>
 <body>
-  <div id="adsbygoogle">
-    <h2>test</h2>
-    <p>test</p>
-  </div>
+<div id="adsbygoogl" style="padding:20px; background:#fafafa; border-radius:10px; margin:20px 0;">
+  <h2 style="margin-bottom:10px;">Recommended Resources</h2>
+  <p style="margin-bottom:15px;">
+    Here are some helpful tools, guides, and updates curated just for you.  
+    Explore the latest tutorials, tech news, and featured articles while supporting our website.
+  </p>
+
+  <!-- docad -->
+  <ins class="adsbygoogle"
+       style="display:block; margin:20px 0;"
+       data-ad-client="ca-pub-2719295794573158"
+       data-ad-slot="4335444793"
+       data-ad-format="auto"
+       data-full-width-responsive="true"></ins>
+  <script>
+       (adsbygoogle = window.adsbygoogle || []).push({});
+  </script>
+
+  <p style="margin-top:15px;">
+    We keep updating this section regularly.  
+    Stay tuned for more helpful content and recommendations!
+  </p>
+</div>
 <script>
 (function(){
 "use strict";
