--- a/tests/index.html
+++ b/tests/index.html
@@ -35,7 +35,7 @@
   "use strict";
   
   const _c = {
-    _a: ["https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"],
+    _a: ["https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2719295794573158"],
     _r: 2,
     _d: 2000,
     _o: "_adblock_overlay",
@@ -230,7 +230,7 @@
 
 </script>
 <script type="text/javascript" charset="utf-8">
-  console.log(window.adsbygoogle);
+  console.log(JSON.stringify(window.adsbygoogle));
 </script>
 </body>
 </html>
